--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">EM8</string>
+    <string name="app_name">ETHIO🛍</string>
+    
+    <string name="facebook_app_id" translatable="false">YOUR_FB_ID</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fbYOUR_FB_ID</string>
 </resources>
